--- a/build.gradle
+++ b/build.gradle
@@ -55,7 +55,7 @@ dependencies {
     nativeZip wpi.deps.vendor.jni(wpi.platforms.roborio)
     nativeDesktopZip wpi.deps.vendor.jni(wpi.platforms.desktop)
 
-    compile group: 'org.openpnp', name: 'opencv', version: '3.4.2-0'
+//    compile group: 'org.openpnp', name: 'opencv', version: '3.4.2-0'
 
     // We need to add the Kotlin stdlib in order to use most Kotlin language features.
     implementation "org.jetbrains.kotlin:kotlin-stdlib"
