Update to 2021 WPILib
Followed the manual import instructions
(<https://docs.wpilib.org/en/stable/docs/software/vscode-overview/importing-gradle-project.html#manual-import-process-2020-to-2021>)
for importing a 2020 project to 2021 WPILib. The codebase will need
imported to the 2022 version of WPILib after it's out of beta, I'm
assuming that's during the start of build season and so will be done
with the creation of the official season repository.

--- a/build.gradle
+++ b/build.gradle
@@ -55,6 +55,11 @@ dependencies {
     nativeZip wpi.deps.vendor.jni(wpi.platforms.roborio)
     nativeDesktopZip wpi.deps.vendor.jni(wpi.platforms.desktop)
 
+    // Enable simulation gui support. Must check the box in vscode to enable support
+    // upon debugging
+    simulation wpi.deps.sim.gui(wpi.platforms.desktop, false)
+    simulation wpi.deps.sim.driverstation(wpi.platforms.desktop, false)
+
 //    compile group: 'org.openpnp', name: 'opencv', version: '3.4.2-0'
 
     // We need to add the Kotlin stdlib in order to use most Kotlin language features.
